--- a/wishlist/desktop.html
+++ b/wishlist/desktop.html
@@ -23,19 +23,21 @@
     </nav>
     <h1 class="title centered-text">Wishlist Generator</h1>
     <div class="vertical-flex">
-        <h2 class="centered-text toggle-btn flex-item">Add new wishlist item</h2>
+        <h2 class="centered-text toggle-btn flex-item">Add new Wishlist item</h2>
         <div class="toggle-item hidden">
             <h2 class="toggle-btn flex-item centered-text">Category</h2>
-            <div class="category centered-text toggle-item flex-item horizontal-flex">
-                <h4 class="flex-item category-item">Restaurant</h4>
-                <h4 class="flex-item category-item">Destination</h4>
-                <h4 class="flex-item category-item">Decor</h4>
-                <h4 class="flex-item category-item">Style / Clothes</h4>
+            <div class="toggle-item hidden">
+                <div class="horizontal-flex">
+                    <h4 class="flex-item category-item centered-text">Restaurant</h4>
+                    <h4 class="flex-item category-item centered-text">Destination</h4>
+                    <h4 class="flex-item category-item centered-text">Decor</h4>
+                    <h4 class="flex-item category-item centered-text">Style / Clothes</h4>
+                </div> 
             </div>  
             <h2 class="toggle-btn flex-item centered-text">Wishlist Item</h2>
-            <input class="toggle-item"></input>
+            <input class="toggle-item hidden"></input>
             <h2 class="centered-text toggle-btn flex-item">Price ($)</h2>
-            <input class="toggle-item"></input>
+            <input class="toggle-item hidden"></input>
         </div>
         
     </div>
