Change subsection headers
Small grammar fix

--- a/wishlist/desktop.html
+++ b/wishlist/desktop.html
@@ -40,10 +40,11 @@
             <input class="toggle-item hidden"></input>
             <p class="centered-text toggle-btn flex-item sub-category">Price ($)</p>
             <input class="toggle-item hidden"></input>
+            <button></button>
         </div>
     </div>
     <div id="wishlist">
-        <p class="section-header toggle-btn centered-text">Functionality Description</p>
+        <p class="section-header toggle-btn centered-text">Functional Description</p>
         <div class=" toggle-item hidden">
             <p class="sub-category">This section will be added to when a new wishlist item is added.</p>
             <p>Basic Functionality:</p>
