Add id to motto

--- a/desktop.html
+++ b/desktop.html
@@ -25,7 +25,7 @@
                 <h2 id="nameplate" class="centered-text dark-purple-font dark-purple-border spaced-lettering">Zeko Madson</h2>
                 <img class="portrait" src="images/portrait.jpg" alt="Portrait">
                 <p class="centered-text dark-purple-font dark-purple-border spaced-lettering">Data Analyst - BI Developer - Aspiring Software Engineer</p>
-                <p>I will confidently go in the direction of my dreams.</p>
+                <p id="motto">I will confidently go in the direction of my dreams.</p>
             </div>
             <div class = "dark-purple-border" id="Professional">
                 <div>
