Add Replit Link to Profile

--- a/desktop.html
+++ b/desktop.html
@@ -163,9 +163,10 @@
                     <div class="dark-purple-border">
                         <h2 class="centered-text toggle-button">Toggle Display!</h2>
                         <div class="section-details hide-content">
-                            <a href="https://github.com/zekomadson">GitHub profile</a>
+                            <a href="https://github.com/zekomadson">GitHub Profile</a>
                             <a href="https://www.linkedin.com/in/zmadson/">LinkedIn Profile</a>
-                            <a href="https://jsfiddle.net/user/zekomadson/fiddles/">JSFiddle profile</a>
+                            <a href="https://jsfiddle.net/user/zekomadson/fiddles/">JSFiddle Profile</a>
+                            <a href="https://replit.com/@zekomadson">Replit Profile</a>
                         </div>
                     </div>
                 </div>
