--- a/spotify/index.html
+++ b/spotify/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="column-flex">
         <div class="flex-item">
-            <h2 id="title">Spotfiy Neary</h2>
+            <h2 id="title">Spotfiy Nearby</h2>
             <h4 id="subtitle">See who's listening to what!</h4>
             <img src="" alt="spotify-logo" id="logo">
         </div>
@@ -23,12 +23,75 @@
                 <p class="listener-name flex-item">Zeko Madson</p>
             </div>
             <div class="song-info flex-item row-flex">
-                <img src="images/song.png" alt="Initimidated Song Art" class="song">
-                <p class="song-name flex-item">Intimidated (feat. H.E.R.)</p>
-                <p class="artist-name flex-item">Kaytranada, H.E.R.</p>
-                <p class="album flex-item">Intimidated</p>
+                <img src="images/songs/intimidated-kaytranada.png" alt="Initimidated Song Art" class="song">
+                <div class="song-details column-flex">
+                    <p class="song-name flex-item">Intimidated (feat. H.E.R.)</p>
+                    <p class="artist-name flex-item">Kaytranada, H.E.R.</p>
+                    <p class="album flex-item">Intimidated</p>
+                </div>
             </div>
             <div class="play-info row-flex">
+                <button class="preview">Preview</button>
+                <button class="play flex-item">Play</button>
+                <button class="queue flex-item">Queue</button>
+                <button class="play-next flex-item">Play Next</button>
+            </div>
+        </div>
+        <div class="row-flex flex-item" id="nearby">
+            <div class="listener row-flex flex-item">
+                <img src="" alt="listener-profile-pic" class="flex-item">
+                <p class="listener-name flex-item">Nikitar</p>
+            </div>
+            <div class="song-info flex-item row-flex">
+                <img src="images/songs/fire-for-you.png" alt="Fire for You Song Art" class="song">
+                <div class="song-details column-flex">
+                    <p class="song-name flex-item">Fire for You</p>
+                    <p class="artist-name flex-item">Cannon</p>
+                    <p class="album flex-item">Shadows</p>
+                </div>
+            </div>
+            <div class="play-info row-flex">
+                <button class="preview">Preview</button>
+                <button class="play flex-item">Play</button>
+                <button class="queue flex-item">Queue</button>
+                <button class="play-next flex-item">Play Next</button>
+            </div>
+        </div>
+        <div class="row-flex flex-item" id="nearby">
+            <div class="listener row-flex flex-item">
+                <img src="" alt="listener-profile-pic" class="flex-item">
+                <p class="listener-name flex-item">Jacob Hentges</p>
+            </div>
+            <div class="song-info flex-item row-flex">
+                <img src="images/songs/all-on-me.png" alt="Fire for You Song Art" class="song">
+                <div class="song-details column-flex">
+                    <p class="song-name flex-item">All on Me (feat. Zhu)</p>
+                    <p class="artist-name flex-item">Tchami</p>
+                    <p class="album flex-item">Year Zero</p>
+                </div>
+            </div>
+            <div class="play-info row-flex">
+                <button class="preview">Preview</button>
+                <button class="play flex-item">Play</button>
+                <button class="queue flex-item">Queue</button>
+                <button class="play-next flex-item">Play Next</button>
+            </div>
+        </div>
+        <div class="row-flex flex-item" id="nearby">
+            <div class="listener row-flex flex-item">
+                <img src="" alt="listener-profile-pic" class="flex-item">
+                <p class="listener-name flex-item">Jacob Hentges</p>
+            </div>
+            <div class="song-info flex-item row-flex">
+                <img src="images/all-on-me.png" alt="Fire for You Song Art" class="song">
+                <div class="song-details column-flex">
+                    <p class="song-name flex-item">All on Me (feat. Zhu)</p>
+                    <p class="artist-name flex-item">Tchami</p>
+                    <p class="album flex-item">Year Zero</p>
+                </div>
+            </div>
+            <div class="play-info row-flex">
+                <button class="preview">Preview</button>
                 <button class="play flex-item">Play</button>
                 <button class="queue flex-item">Queue</button>
                 <button class="play-next flex-item">Play Next</button>
