--- a/spotify/index.html
+++ b/spotify/index.html
@@ -12,10 +12,12 @@
 
 <body>
     <div class="column-flex">
-        <div class="flex-item">
-            <h2 id="title">Spotfiy Nearby</h2>
-            <h4 id="subtitle">See who's listening to what!</h4>
-            <img src="" alt="spotify-logo" id="logo">
+        <div class="flex-item row-flex">
+            <div class="title column-flex">
+                <h2 id="title" class="centered">Spotfiy Nearby</h2>
+                <h4 id="subtitle" class="centered">See who's listening to what!</h4>
+            </div>
+            <img src="" alt="spotify-logo" id="logo" class="flex-item">
         </div>
         <div class="row-flex flex-item" id="nearby">
             <div class="listener row-flex flex-item">
