--- a/spotify/index.html
+++ b/spotify/index.html
@@ -31,6 +31,7 @@
                     <p class="artist-name flex-item">Kaytranada, H.E.R.</p>
                     <p class="album flex-item">Intimidated</p>
                 </div>
+                <button class="like">Send Fav</button>
             </div>
             <div class="play-info row-flex">
                 <button class="preview">Preview</button>
@@ -51,6 +52,7 @@
                     <p class="artist-name flex-item">Cannon</p>
                     <p class="album flex-item">Shadows</p>
                 </div>
+                <button class="like">Send Fav</button>
             </div>
             <div class="play-info row-flex">
                 <button class="preview">Preview</button>
@@ -71,6 +73,7 @@
                     <p class="artist-name flex-item">Tchami</p>
                     <p class="album flex-item">Year Zero</p>
                 </div>
+                <button class="like">Send Fav</button>
             </div>
             <div class="play-info row-flex">
                 <button class="preview">Preview</button>
