Fix formatting of text on buttons
There were a few issues with the text within the buttons, these were resolved. Fixes include: Center align text, shrink font size, shrink letter spacing

--- a/spotify/index.html
+++ b/spotify/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
-    <title>Spotfiy Nearby</title>
+    <title>Spotfiy Radar</title>
 </head>
 
 <body>
@@ -47,7 +47,7 @@
         <div class="row-flex flex-item" id="nearby">
             <div class="listener row-flex flex-item">
                 <img src="" alt="listener-profile-pic" class="flex-item">
-                <p class="listener-name flex-item">Nikitar</p>
+                <p class="listener-name flex-item">Nikita Rau</p>
             </div>
             <div class="song-info flex-item row-flex">
                 <img src="images/songs/fire-for-you.png" alt="Fire for You Song Art" class="song">
@@ -68,14 +68,35 @@
         <div class="row-flex flex-item" id="nearby">
             <div class="listener row-flex flex-item">
                 <img src="" alt="listener-profile-pic" class="flex-item">
-                <p class="listener-name flex-item">Jacob Hentges</p>
+                <p class="listener-name flex-item">Brennen Ryder</p>
             </div>
             <div class="song-info flex-item row-flex">
                 <img src="images/songs/all-on-me.png" alt="Fire for You Song Art" class="song">
                 <div class="song-details column-flex">
-                    <p class="song-name flex-item">All on Me (feat. Zhu)</p>
-                    <p class="artist-name flex-item">Tchami</p>
-                    <p class="album flex-item">Year Zero</p>
+                    <p class="song-name flex-item">Heaven's Only Wishful</p>
+                    <p class="artist-name flex-item">MorMor</p>
+                    <p class="album flex-item">Heaven's Only Wishful</p>
+                </div>
+                <button class="like">Send Fav</button>
+            </div>
+            <div class="play-info row-flex">
+                <button class="preview">Preview</button>
+                <button class="play flex-item">Play</button>
+                <button class="queue flex-item">Queue</button>
+                <button class="play-next flex-item">Play Next</button>
+            </div>
+        </div>
+        <div class="row-flex flex-item" id="nearby">
+            <div class="listener row-flex flex-item">
+                <img src="" alt="listener-profile-pic" class="flex-item">
+                <p class="listener-name flex-item">Jack Rogosin</p>
+            </div>
+            <div class="song-info flex-item row-flex">
+                <img src="images/songs/all-on-me.png" alt="Fire for You Song Art" class="song">
+                <div class="song-details column-flex">
+                    <p class="song-name flex-item">Blue World</p>
+                    <p class="artist-name flex-item">Mac Miller</p>
+                    <p class="album flex-item">Circles</p>
                 </div>
                 <button class="like">Send Fav</button>
             </div>
