Add Spotify Branding
Addition of the spotify logo in the top right corner.

--- a/spotify/index.html
+++ b/spotify/index.html
@@ -17,7 +17,9 @@
                 <h2 id="title" class="centered">Spotfiy Radar</h2>
                 <h4 id="subtitle" class="centered">See who's listening to what!</h4>
             </div>
-            <img src="" alt="spotify-logo" id="logo" class="flex-item">
+            <div class="logo-container flex-item">
+                <img src="images/branding/Spotify_Green.png" alt="spotify-logo" id="logo" >
+            </div>
         </div>
             <div class="slider">
                 <input type="range" min="100" max="500" value="500" step="50" class="slider__input">
