Format the profile of the listener
Formatting of the image and name of the listener near you. This includes a circle image, aligned in the center and their name below them.

--- a/spotify/index.html
+++ b/spotify/index.html
@@ -26,8 +26,10 @@
                 <p>Radar Radius: <span class="slider__value">500</span></p>
               </div>
         <div class="row-flex flex-item" id="nearby">
-            <div class="listener row-flex flex-item">
-                <img src="" alt="listener-profile-pic" class="flex-item">
+            <div class="listener column-flex flex-item">
+                <div class="profile-pic-container">
+                    <img src="" alt="listener-profile-pic">
+                </div>
                 <p class="listener-name flex-item">Zeko Madson</p>
             </div>
             <div class="song-info flex-item row-flex">
@@ -47,8 +49,10 @@
             </div>
         </div>
         <div class="row-flex flex-item" id="nearby">
-            <div class="listener row-flex flex-item">
-                <img src="" alt="listener-profile-pic" class="flex-item">
+            <div class="listener column-flex flex-item">
+                <div class="profile-pic-container">
+                    <img src="" alt="listener-profile-pic">
+                </div>
                 <p class="listener-name flex-item">Nikita Rau</p>
             </div>
             <div class="song-info flex-item row-flex">
@@ -68,8 +72,10 @@
             </div>
         </div>
         <div class="row-flex flex-item" id="nearby">
-            <div class="listener row-flex flex-item">
-                <img src="" alt="listener-profile-pic" class="flex-item">
+            <div class="listener column-flex flex-item">
+                <div class="profile-pic-container">
+                    <img src="" alt="listener-profile-pic">
+                </div>
                 <p class="listener-name flex-item">Brennen Ryder</p>
             </div>
             <div class="song-info flex-item row-flex">
@@ -89,8 +95,10 @@
             </div>
         </div>
         <div class="row-flex flex-item" id="nearby">
-            <div class="listener row-flex flex-item">
-                <img src="" alt="listener-profile-pic" class="flex-item">
+            <div class="listener column-flex flex-item">
+                <div class="profile-pic-container">
+                    <img src="" alt="listener-profile-pic">
+                </div>
                 <p class="listener-name flex-item">Jack Rogosin</p>
             </div>
             <div class="song-info flex-item row-flex">
