--- a/spotify/index.html
+++ b/spotify/index.html
@@ -12,124 +12,8 @@
 
 <body>
     <div class="column-flex">
-        <div class="flex-item row-flex">
-            <div class="title column-flex">
-                <h2 id="title" class="centered">Spotfiy Radar</h2>
-                <h4 id="subtitle" class="centered">See who's listening to what!</h4>
-            </div>
-            <div class="logo-container flex-item">
-                <img src="images/branding/Spotify_Green.png" alt="spotify-logo" id="logo">
-            </div>
-        </div>
-        <div class="slider">
-            <input type="range" min="100" max="500" value="500" step="50" class="slider__input">
-            <p>Radar Radius: <span class="slider__value">500</span></p>
-        </div>
-        <div class="row-flex flex-item" id="nearby">
-            <div class="listener column-flex flex-item">
-                <div class="profile-pic-container">
-                    <img src="images/profiles/zeko.png" alt="listener-profile-pic">
-                </div>
-                <p class="listener-name flex-item">Zeko Madson</p>
-            </div>
-            <div class="row-flex">
-                <div class="song-info flex-item column-flex">
-                    <img src="images/songs/fire-for-you.png" alt="Fire for You Song Art" class="song">
-                    <div class="song-details column-flex">
-                        <p class="song-name flex-item">Fire for You</p>
-                        <p class="artist-name flex-item">Cannon</p>
-                        <p class="album flex-item">Shadows</p>
-                    </div>
-
-                </div>
-                <button class="like">Fav</button>
-            </div>
-            <div class="play-info row-flex">
-                <button class="preview">Preview</button>
-                <button class="play flex-item">Play</button>
-                <button class="queue flex-item">Queue</button>
-                <button class="play-next flex-item">Play Next</button>
-            </div>
-        </div>
-        <div class="row-flex flex-item" id="nearby">
-            <div class="listener column-flex flex-item">
-                <div class="profile-pic-container">
-                    <img src="images/profiles/zeko.png" alt="listener-profile-pic">
-                </div>
-                <p class="listener-name flex-item">Nikita Rau</p>
-            </div>
-            <div class="row-flex">
-                <div class="song-info flex-item column-flex">
-                    <img src="images/songs/fire-for-you.png" alt="Fire for You Song Art" class="song">
-                    <div class="song-details column-flex">
-                        <p class="song-name flex-item">Fire for You</p>
-                        <p class="artist-name flex-item">Cannon</p>
-                        <p class="album flex-item">Shadows</p>
-                    </div>
-
-                </div>
-                <button class="like">Fav</button>
-            </div>
-            <div class="play-info row-flex">
-                <button class="preview">Preview</button>
-                <button class="play flex-item">Play</button>
-                <button class="queue flex-item">Queue</button>
-                <button class="play-next flex-item">Play Next</button>
-            </div>
-        </div>
-        <div class="row-flex flex-item" id="nearby">
-            <div class="listener column-flex flex-item">
-                <div class="profile-pic-container">
-                    <img src="images/profiles/zeko.png" alt="listener-profile-pic">
-                </div>
-                <p class="listener-name flex-item">Brennen Ryder</p>
-            </div>
-            <div class="row-flex">
-                <div class="song-info flex-item column-flex">
-                    <img src="images/songs/fire-for-you.png" alt="Fire for You Song Art" class="song">
-                    <div class="song-details column-flex">
-                        <p class="song-name flex-item">Fire for You</p>
-                        <p class="artist-name flex-item">Cannon</p>
-                        <p class="album flex-item">Shadows</p>
-                    </div>
-
-                </div>
-                <button class="like">Fav</button>
-            </div>
-            <div class="play-info row-flex">
-                <button class="preview">Preview</button>
-                <button class="play flex-item">Play</button>
-                <button class="queue flex-item">Queue</button>
-                <button class="play-next flex-item">Play Next</button>
-            </div>
-        </div>
-        <div class="row-flex flex-item" id="nearby">
-            <div class="listener column-flex flex-item">
-                <div class="profile-pic-container">
-                    <img src="images/profiles/zeko.png" alt="listener-profile-pic">
-                </div>
-                <p class="listener-name flex-item">Jack Rogosin</p>
-            </div>
-            <div class="row-flex">
-                <div class="song-info flex-item column-flex">
-                    <img src="images/songs/fire-for-you.png" alt="Fire for You Song Art" class="song">
-                    <div class="song-details column-flex">
-                        <p class="song-name flex-item">Fire for You</p>
-                        <p class="artist-name flex-item">Cannon</p>
-                        <p class="album flex-item">Shadows</p>
-                    </div>
-
-                </div>
-                <button class="like">Fav</button>
-            </div>
-            <div class="play-info row-flex">
-                <button class="preview">Preview</button>
-                <button class="play flex-item">Play</button>
-                <button class="queue flex-item">Queue</button>
-                <button class="play-next flex-item">Play Next</button>
-            </div>
-        </div>
+        <h2 id="title">Spotify Radar</h2>
+        <h4 id="slogan">Discover the Beat in Your Radius - Hear What Your Neighbors are Listening to!</h4>
     </div>
 </body>
-
 </html>
