Update font and color styling of header

--- a/spotify/index.html
+++ b/spotify/index.html
@@ -11,9 +11,10 @@
 </head>
 
 <body>
-    <div class="column-flex">
-        <h2 id="title">Spotify Radar</h2>
-        <h4 id="slogan">Discover the Beat in Your Radius - Hear What Your Neighbors are Listening to!</h4>
+    <div id="header" class="column-flex">
+        <h2 id="title" class="centered">Spotify Radar</h2>
+        <h4 id="slogan">Discover the Beat in Your Radius!</h4>
     </div>
 </body>
+
 </html>
