Add profile pic and format it
Addition of the profile pic was important. I used the vw and vh units of measurements to ensure that it was responsive

--- a/spotify/index.html
+++ b/spotify/index.html
@@ -11,9 +11,14 @@
 </head>
 
 <body>
-    <div id="header" class="column-flex">
+    <div id="header" class="column-flex off-black-background">
         <h2 id="title" class="centered">Spotify Radar</h2>
         <h4 id="slogan">Discover the Beat in Your Radius!</h4>
+    </div>
+    <div>
+        <div class="user off-black-background">
+            <img src="images/profiles/zeko.png" alt="username">
+        </div>
     </div>
 </body>
 
