--- a/spotify/index.html
+++ b/spotify/index.html
@@ -16,8 +16,10 @@
         <h4 id="slogan">Discover the Beat in Your Radius!</h4>
     </div>
     <div>
-        <div class="user off-black-background">
+        <div class="user grey-background row-flex">
             <img src="images/profiles/zeko.png" alt="username">
+            <p class="username">Zeko Madson</p>
+
         </div>
     </div>
 </body>
