--- a/spotify/index.html
+++ b/spotify/index.html
@@ -17,10 +17,11 @@
     </div>
     <div>
         <div class="user grey-background row-flex">
-            <img src="images/profiles/zeko.png" alt="username">
-            <p class="username">Zeko Madson</p>
-
+            <img class="profile-pic" src="images/profiles/zeko.png" alt="username">
+            <p class="username">Zeko</p>
+            <img class="song-pic" src="images/songs/all-on-me.png" alt="song name">
         </div>
+        
     </div>
 </body>
 
