--- a/spotify/index.html
+++ b/spotify/index.html
@@ -20,6 +20,11 @@
             <img class="profile-pic" src="images/profiles/zeko.png" alt="username">
             <p class="username">Zeko</p>
             <img class="song-pic" src="images/songs/all-on-me.png" alt="song name">
+           <div class="column-flex song-details">
+               <p class="flex-item">Song Name</p>
+               <p class="flex-item">Artist Name</p>
+               <p class="flex-item">Album Name</p>
+           </div>
         </div>
         
     </div>
